crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@log_telemetry.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
entrada (41)
resultado 42
evento-manual
0
